--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -32,7 +32,7 @@ block content
       .carousel-inner.camera-carousel-inner
 
         .carousel-item.banner-carousel.banner-carousel--dslr.active
-          img.banner-carousel__img(src='img/img--camera-hub/portal-dslr-min.png' alt='')
+          img.banner-carousel__img(src='img/img--camera-hub/portal-dslr-min.png' alt='máy ảnh dslr tốt nhất')
           .carousel-caption.banner-carousel__caption.font-weight-bold
             p.banner-carousel__text.banner-carousel__text--dslr CHUYÊN NGHIỆP
             p.banner-carousel__text.banner-carousel__text--dslr CHUẨN CHỈ
@@ -40,7 +40,7 @@ block content
             a.btn.btn--dark.banner-carousel__btn(href="dslr-hub.html") Xem tất cả DSLR
 
         .carousel-item.banner-carousel.banner-carousel--mrl
-          img.banner-carousel__img(src='img/img--camera-hub/portal-mrl-min-v2.png' alt='')
+          img.banner-carousel__img(src='img/img--camera-hub/portal-mrl-min-v2.png' alt='máy ảnh mirrorless tốt nhất')
           .carousel-caption.banner-carousel__caption.font-weight-bold
             p.banner-carousel__text.banner-carousel__text--mrl TRẺ TRUNG
             p.banner-carousel__text.banner-carousel__text--mrl TIỆN LỢI
@@ -61,7 +61,7 @@ block content
 
     .portal__body.container-xl.d-flex
       .banner-full.banner-full--dslr.dslr-half.d-flex.w-50(data-aos="fade-right" data-aos-easing="ease-in-sine" data-aos-duration="1000")
-        img.banner-full__img(src="img/img--camera-hub/portal-dslr-v1.png", alt="")
+        img.banner-full__img(src="img/img--camera-hub/portal-dslr-v1.png", alt="máy ảnh dslr tốt nhất")
         .banner-full__text-area.align-self-center
           .banner-full__text-only.font-weight-bold
             p.banner-full__text.banner-full__text--dslr CHUYÊN NGHIỆP
@@ -76,7 +76,7 @@ block content
             p.banner-full__text.banner-full__text--mrl.text-light TIỆN LỢI
             p.banner-full__text.banner-full__text--mrl.text-light THỜI THƯỢNG
           a.btn.btn--light.banner-full__btn.banner-full__btn--mrl(href="dslr-hub.html") Xem tất cả Mirrorless
-        img.banner-full__img(src="img/img--camera-hub/portal-mrl-max-v6.png", alt="")
+        img.banner-full__img(src="img/img--camera-hub/portal-mrl-max-v6.png", alt="máy ảnh mirrorless tốt nhất")
       
     a.btn.btn--dark.portal__btn(href="dslr-hub.html" data-aos="fade-up" data-aos-offset="-150" data-aos-easing="ease-in-sine" data-aos-duration="1000") Xem tất cả máy ảnh
 
