--- a/halo/template/cart.pug
+++ b/halo/template/cart.pug
@@ -54,12 +54,12 @@ block content
       .cart__item
 
         a.col--img-min.display-till-md(href="details.html") 
-          img(src="img/img--cart/cart-img.jpg", alt="canon eos 1DX Mark 3")
+          img(src="img/img--cart/cart-img.jpg", alt="Sony Alpha A7 Mark II")
 
         .col-group
           .col--order.hidden-till-md 2 
           a.col--img-max.hidden-till-md(href="details.html")
-            img(src="img/img--item/item-3-max.jpg", alt="canon eos 1DX Mark 3")
+            img(src="img/img--item/item-3-max.jpg", alt="Sony Alpha A7 Mark II")
           .col--name 
             a(href="details.html") Sony Alpha A7 Mark&nbsp;II
           .col--single-price 
