--- a/halo/template/dslr-hub.pug
+++ b/halo/template/dslr-hub.pug
@@ -165,9 +165,9 @@ block content
         h1 Tin khuyến mại
 
         .promo__collection
-          img.promo-item(src="img/img--misc/promo-img-1.jpg", alt="")
-          img.promo-item(src="img/img--misc/promo-img-2.jpg", alt="") 
-          img.promo-item(src="img/img--misc/promo-img-1.jpg", alt="")
+          img.promo-item(src="img/img--misc/promo-img-1.jpg", alt="khuyến mại máy ảnh")
+          img.promo-item(src="img/img--misc/promo-img-2.jpg", alt="khuyến mại máy ảnh") 
+          img.promo-item(src="img/img--misc/promo-img-1.jpg", alt="khuyến mại máy ảnh")
       
     .dslr-hub__main-area
       .main-area__sub-filter-area
