--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -28,7 +28,7 @@ block content
           a.btn.btn--dark.seemore-btn(href="camera-hub.html") Xem chi tiết
 
         .intro__img.col-md(data-aos="fade-left" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000")
-          img(src="img/img--camera-body/camera-intro-imgv2.png", alt="")
+          img(src="img/img--camera-body/camera-intro-imgv2.png", alt="Máy ảnh tốt nhất")
 
   section.intro.intro--lens.dark-side
     .container-xl.px-sm-5.px-xl-0
@@ -41,7 +41,7 @@ block content
           a.btn.btn--light.seemore-btn(href="camera-hub.html") Xem chi tiết
 
         .intro__img.col-md(data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000")
-          img(src="img/img--lens/lens-intro-imgv2.png", alt="")
+          img(src="img/img--lens/lens-intro-imgv2.png", alt="lens máy ảnh tốt nhất")
 
   section.intro.intro--equip
     .container-xl.px-sm-5.px-xl-0.mw-900
@@ -53,16 +53,16 @@ block content
 
       .intro__img(data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000")
         a(href="camera-hub.html") 
-          img(src="img/img--equip/equip-intro--xl.jpg", alt="")
+          img(src="img/img--equip/equip-intro--xl.jpg", alt="phụ kiện máy ảnh tốt nhất")
 
   section.specials.dark-side
     .container-xl.px-sm-5.px-xl-0.d-flex.flex-column.align-items-center
       h1 Đối tác chiến lược
       .brands__img.row
-        img.brands-item.col-6.col-md-3(src="img/img--misc/brands-sony.png", alt="")
-        img.brands-item.col-6.col-md-3(src="img/img--misc/brands-nikon.png", alt="")
-        img.brands-item.col-6.col-md-3(src="img/img--misc/brands-canon.png", alt="")
-        img.brands-item.col-6.col-md-3(src="img/img--misc/brands-sigma.png", alt="")
+        img.brands-item.col-6.col-md-3(src="img/img--misc/brands-sony.png", alt="Sony chính hãng")
+        img.brands-item.col-6.col-md-3(src="img/img--misc/brands-nikon.png", alt="Canon chính hãng")
+        img.brands-item.col-6.col-md-3(src="img/img--misc/brands-canon.png", alt="Nikon chính hãng")
+        img.brands-item.col-6.col-md-3(src="img/img--misc/brands-sigma.png", alt="Sigma chính hãng")
       .brands__text
         h3.font-italic.text-center.mw-900 Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: 
           span.font-weight-bold từ 12 tháng lên 24 tháng
@@ -105,11 +105,11 @@ block content
 
       .promo__collection.row
         a.promo-item.col-sm-4(href="#")
-          img(src="img/img--misc/promo-img-1.jpg", alt="")
+          img(src="img/img--misc/promo-img-1.jpg", alt="khuyến mại máy ảnh")
         a.promo-item.col-sm-4(href="#")   
-          img(src="img/img--misc/promo-img-2.jpg", alt="") 
+          img(src="img/img--misc/promo-img-2.jpg", alt="khuyến mại máy ảnh") 
         a.promo-item.col-sm-4(href="#")
-          img(src="img/img--misc/promo-img-1.jpg", alt="")
+          img(src="img/img--misc/promo-img-1.jpg", alt="khuyến mại máy ảnh")
 
       a.btn.btn--dark.seemore-btn.mx-auto(href="#") Xem thêm
 
@@ -118,7 +118,7 @@ block content
       h1 HALO review
 
       a.review-item.d-flex(href="review-details.html" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000")
-        img.review-item__img(src="img/img--misc/review-img-v2.png", alt="")
+        img.review-item__img(src="img/img--misc/review-img-v2.png", alt="Top DSLR đáng mua năm 2021")
 
         .review-item__content.d-flex.flex-column.justify-content-between
           .review-header.d-flex.flex-wrap.align-items-start.align-content-start
@@ -130,7 +130,7 @@ block content
           p.review-preview Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.
       
       a.review-item.d-flex(href="review-details.html" data-aos="fade-left" data-aos-offset="50" data-aos-easing="ease-in-sine" data-aos-duration="1000")
-        img.review-item__img(src="img/img--misc/review-img-v2.png", alt="")
+        img.review-item__img(src="img/img--misc/review-img-v2.png", alt="Top DSLR đáng mua năm 2021")
         
         .review-item__content.d-flex.flex-column.justify-content-between
           .review-header.d-flex.flex-wrap.align-items-start.align-content-start
@@ -152,9 +152,9 @@ block content
       p.connection__text.text-center Hoặc theo dõi chúng tôi tại
       .connection__socials.d-flex.justify-content-between.mx-auto
         a.socials__item.d-block(href="#")
-          img(src="img/img--misc/social-fb.png", alt="")
+          img(src="img/img--misc/social-fb.png", alt="halo thế giới máy ảnh")
         a.socials__item.d-block(href="#")
-          img(src="img/img--misc/social-insta.png", alt="")
+          img(src="img/img--misc/social-insta.png", alt="halo thế giới máy ảnh")
         a.socials__item.d-block(href="#")
-          img.h-100(src="img/img--misc/social-twitter.png", alt="")
+          img.h-100(src="img/img--misc/social-twitter.png", alt="halo thế giới máy ảnh")
 
