--- a/halo/template/parts/card-1.pug
+++ b/halo/template/parts/card-1.pug
@@ -1,5 +1,5 @@
 .card.item.item--hot.item--love.item--sale
-  img.card-img-top(src='img/img--camera-body/canon-eos-5d-mark-iv-card.jpg' alt='')
+  img.card-img-top(src='img/img--camera-body/canon-eos-5d-mark-iv-card.jpg' alt='canon-eos-5d-mark-iv')
   img.item__badge.item__badge--hot(src="img/img--misc/badge--hot.png", alt="")
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
