--- a/halo/template/parts/card-4.pug
+++ b/halo/template/parts/card-4.pug
@@ -1,5 +1,5 @@
 .card.item.item--hot.item--love
-  img.card-img-top(src='img/img--item/item-4.jpg' alt='')
+  img.card-img-top(src='img/img--item/item-4.jpg' alt='Nikon D7500')
   img.item__badge.item__badge--hot(src="img/img--misc/badge--hot.png", alt="")
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
