--- a/halo/template/parts/footer.pug
+++ b/halo/template/parts/footer.pug
@@ -1,6 +1,6 @@
 footer.dark-side#footer 
   .container.px-sm-5.mw-900.d-flex.flex-column.justify-content-center.align-items-center
-    img.footer__logo(src="img/img--misc/logo-white.png", alt="")  
+    img.footer__logo(src="img/img--misc/logo-white.png", alt="halo thế giới máy ảnh")  
 
     ul.footer__menu.d-flex.justify-content-between.align-items-center
       li.footer__item.d-flex.justify-content-center.align-items-center
