--- a/halo/template/parts/header.pug
+++ b/halo/template/parts/header.pug
@@ -6,7 +6,7 @@ header#header
         span.navbar-toggler-icon
 
       a.navbar-brand(href='index.html')
-        img.header__logo(src="img/img--misc/logo-white.png", alt="")
+        img.header__logo(src="img/img--misc/logo-white.png", alt="halo thế giới máy ảnh")
 
       #collapsibleNavbar.collapse.navbar-collapse
 
