--- a/halo/template/parts/review-post-2.pug
+++ b/halo/template/parts/review-post-2.pug
@@ -1,5 +1,5 @@
 a.review__post(href="review-details.html")
-  img.review__post--img(src="img/img--review/review-post-img-2.png", alt="")
+  img.review__post--img(src="img/img--review/review-post-img-2.png", alt="Top 5 DSLR đáng mua 2021")
   .review__post--content 
     h1.post__header.text-left Top 5 DSLR đáng mua năm&nbsp;2021
     p.post__subtext.font-italic 
