--- a/halo/template/parts/review-post-3.pug
+++ b/halo/template/parts/review-post-3.pug
@@ -1,5 +1,5 @@
 a.review__post(href="review-details.html")
-  img.review__post--img(src="img/img--review/review-post-img-3.jpg", alt="")
+  img.review__post--img(src="img/img--review/review-post-img-3.jpg", alt="đánh giá Canon EF 70-200mm f/2.8L IS III USM")
   .review__post--content 
     h1.post__header.text-left Canon EF 70-200mm f/2.8L IS III USM: Ống kính tele "trấn&nbsp;phái"
     p.post__subtext.font-italic 
