--- a/halo/template/review.pug
+++ b/halo/template/review.pug
@@ -15,8 +15,8 @@ block content
       li.breadcrumb-item.active Đánh giá
 
   .review__main-banner
-    img.main-banner__logo(src="img/img--misc/logo-white.png", alt="")
-    img.main-banner__text(src="img/img--review/banner-text.png", alt="")
+    img.main-banner__logo(src="img/img--misc/logo-white.png", alt="đánh giá máy ảnh")
+    img.main-banner__text(src="img/img--review/banner-text.png", alt="đánh giá máy ảnh")
 
   section.display-till-md
     #sub-banner-area--min.carousel.slide(data-ride='carousel' data-touch='true' data-interval="false")
@@ -29,20 +29,20 @@ block content
         
       .carousel-inner
         a.carousel-item.active(href="review-details.html") 
-          img(src='/halo/img/img--review/review-big-banner-xl-sfw.jpg' alt='')
+          img(src='/halo/img/img--review/review-big-banner-xl-sfw.jpg' alt='Canon M5')
           .carousel-caption
             h3 Một ngày cùng Canon M5
         a.carousel-item(href="review-details.html") 
-          img(src='img/img--review/review-small-banner-xl-sfw-1.jpg' alt='')
+          img(src='img/img--review/review-small-banner-xl-sfw-1.jpg' alt='Sony A6400')
           .carousel-caption
             h3 Sony A6400 Review 
           span.easter-egg 
         a.carousel-item(href="review-details.html") 
-          img(src='img/img--review/review-small-banner-xl-sfw-2.jpg' alt='')
+          img(src='img/img--review/review-small-banner-xl-sfw-2.jpg' alt='Canon 85mm f/1.8')
           .carousel-caption
-            h3 Canon 85mm Review         
+            h3 Canon 85mm f/1.8 Review         
         a.carousel-item(href="review-details.html") 
-          img(src='img/img--review/review-small-banner-xl-sfw-3.jpg' alt='')
+          img(src='img/img--review/review-small-banner-xl-sfw-3.jpg' alt='150-600mm f/5-6.3')
           .carousel-caption
             h3 Sigma 150-600mm f/5-6.3 Review
             
@@ -54,25 +54,25 @@ block content
   section#sub-banner-area--max.container-xl.hidden-till-md
 
     a.review__sub-banner--big(href="review-details.html")
-      img.display-till-xl(src="/halo/img/img--review/review-big-banner-md-sfw.jpg", alt="")
-      img.hidden-till-xl(src="/halo/img/img--review/review-big-banner-xl-sfw.jpg", alt="")
+      img.display-till-xl(src="/halo/img/img--review/review-big-banner-md-sfw.jpg", alt="Canon M5")
+      img.hidden-till-xl(src="/halo/img/img--review/review-big-banner-xl-sfw.jpg", alt="Canon M5")
       .sub-banner__caption
         span Một ngày cùng Canon M5
 
     .review__sub-banner--small-area 
 
       a.review__sub-banner--small(href="review-details.html")
-        img(src="img/img--review/review-small-banner-xl-sfw-1.jpg", alt="") 
+        img(src="img/img--review/review-small-banner-xl-sfw-1.jpg", alt="Sony A6400") 
         .sub-banner__caption
           span Sony A6400 Review
 
       a.review__sub-banner--small(href="review-details.html")
-        img(src="img/img--review/review-small-banner-xl-sfw-2.jpg", alt="") 
+        img(src="img/img--review/review-small-banner-xl-sfw-2.jpg", alt="Nikon Z7") 
         .sub-banner__caption
           span Nikon Z7 Review
 
       a.review__sub-banner--small.hidden-till-xl(href="review-details.html")
-        img(src="img/img--review/review-small-banner-xl-sfw-3.jpg", alt="") 
+        img(src="img/img--review/review-small-banner-xl-sfw-3.jpg", alt="Sigma 150-600mm f/5-6.3") 
         .sub-banner__caption
           span Sigma 150-600mm f/5-6.3 Review
 
@@ -94,14 +94,14 @@ block content
     aside.review__aside-area.hidden-till-md
       h3.aside__header Đọc nhiều nhất
       a.aside__post.d-block(href="")
-        img.aside__post--img(src="img/img--review/aside-img-1.png", alt="")
+        img.aside__post--img(src="img/img--review/aside-img-1.png", alt="đánh giá nikon D500")
         p.aside__post--header D500 Review: Canh bạc của Nikon
 
       a.aside__post.d-block(href="")
-        img.aside__post--img(src="img/img--review/aside-img-2.jpg", alt="")
+        img.aside__post--img(src="img/img--review/aside-img-2.jpg", alt="nikon canon")
         p.aside__post--header Vị thế hiện tại của 2 ông lớn Ca-Ni
 
       a.aside__post.d-block(href="")
-        img.aside__post--img(src="img/img--review/aside-img-3.png", alt="")
+        img.aside__post--img(src="img/img--review/aside-img-3.png", alt="đánh giá nikon D5600")
         p.aside__post--header D5600 Review: Máy ảnh cho mọi nhà
     
