--- a/halo/template/search-result.pug
+++ b/halo/template/search-result.pug
@@ -11,7 +11,7 @@ block title
 block content
 
   .search__banner.w-100
-    img.search__logo(src="img/img--misc/logo-white.png", alt="")
+    img.search__logo(src="img/img--misc/logo-white.png", alt="logo-halo")
   
   section.page-wrapper.container-xl 
 
@@ -27,9 +27,9 @@ block content
 
     .promo-area.hidden-till-md
       h1.promo-header Khuyến mại HOT
-      img.promo-item(src="img/img--misc/promo-img-1.jpg", alt="")
-      img.promo-item(src="img/img--misc/promo-img-2.jpg", alt="")
-      img.promo-item(src="img/img--misc/promo-img-1.jpg", alt="")
+      img.promo-item(src="img/img--misc/promo-img-1.jpg", alt="khuyến mại sony")
+      img.promo-item(src="img/img--misc/promo-img-2.jpg", alt="khuyến mại canon")
+      img.promo-item(src="img/img--misc/promo-img-1.jpg", alt="khuyến mại nikon")
 
 
 
