--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -30,21 +30,21 @@ block content
         span x / 5
 
     section.details__img-area
-      img(src="img/img--details/detail__main-img-1.jpg", alt="").details__main-img
+      img(src="img/img--details/detail__main-img-1.jpg", alt="Canon 1DX Mark III").details__main-img
       .details__sub-img-area
-        img.details__sub-img(src="img/img--details/detail__main-img-1.jpg", alt="")  
-        img.details__sub-img(src="img/img--details/detail__sub-img-1.jpg", alt="") 
-        img.details__sub-img(src="img/img--details/detail__sub-img-2.jpg", alt="") 
-        img.details__sub-img(src="img/img--details/detail__sub-img-3.jpg", alt="") 
-        img.details__sub-img(src="img/img--details/detail__sub-img-4.jpg", alt="")
-        img.details__sub-img(src="img/img--details/detail__sub-img-5.jpg", alt="")
+        img.details__sub-img(src="img/img--details/detail__main-img-1.jpg", alt="Canon 1DX Mark III")  
+        img.details__sub-img(src="img/img--details/detail__sub-img-1.jpg", alt="Canon 1DX Mark III") 
+        img.details__sub-img(src="img/img--details/detail__sub-img-2.jpg", alt="Canon 1DX Mark III") 
+        img.details__sub-img(src="img/img--details/detail__sub-img-3.jpg", alt="Canon 1DX Mark III") 
+        img.details__sub-img(src="img/img--details/detail__sub-img-4.jpg", alt="Canon 1DX Mark III")
+        img.details__sub-img(src="img/img--details/detail__sub-img-5.jpg", alt="Canon 1DX Mark III")
 
 
       #main-img--full-size.modal.fade
         .modal-dialog.modal-dialog-centered
           .modal-content
             button.close(type='button' data-dismiss='modal') &times;
-            img(src="img/img--details/sample-1.png", alt="")
+            img(src="img/img--details/sample-1.png", alt="Canon 1DX Mark III")
 
     section.details__summary
       .summary__basic
@@ -89,9 +89,9 @@ block content
           br 
           span.font-14.font-italic.font-weight-normal (Tổng giá trị 900.000đ)
         .gift-wrapper 
-          img.gift-img(src="img/img--details/gift-img-2.jpg", alt="")
-          img.gift-img(src="img/img--details/gift-img-2.jpg", alt="")
-          img.gift-img(src="img/img--details/gift-img-2.jpg", alt="")
+          img.gift-img(src="img/img--details/gift-img-2.jpg", alt="quà tặng Canon 1DX Mark III")
+          img.gift-img(src="img/img--details/gift-img-2.jpg", alt="quà tặng Canon 1DX Mark III")
+          img.gift-img(src="img/img--details/gift-img-2.jpg", alt="quà tặng Canon 1DX Mark III")
       
       .offers__special
         h2.details__sub-header Ưu đãi đặc biệt
@@ -126,28 +126,28 @@ block content
       #intro.main-info__content.collapse.show
         h3.main-info__inner-header Cảm biến mới, hệ thống hình ảnh mới
 
-        img(src="img/img--details/intro-img-1.jpg", alt="")
+        img(src="img/img--details/intro-img-1.jpg", alt="Canon 1DX Mark III")
 
         p Canon EOS 1D X Mark III sử dụng cảm biến hoàn toàn mới 20.1MP kết hợp với bộ xử lý hình ảnh DIGIC X mang lại chất lượng hình ảnh sắc nét ấn tượng với độ chi tiết cao nhất, giảm thiểu xác suất sai màu và hiệu ứng mới. 
 
-        img(src="img/img--details/intro-img-2.png", alt="")
+        img(src="img/img--details/intro-img-2.png", alt="Canon 1DX Mark III")
         
         p Ngoài tốc độ ấn tượng, bộ xử lý cảm biến còn có phạm vi độ nhạy của dải ISO từ 100-102400, có thể mở rộng thành ISO 50-819200 để hỗ trợ làm việc trong nhiều điều kiện ánh sáng khác nhau. 
 
         h3.main-info__inner-header Hệ thống lấy nét
 
-        img(src="img/img--details/intro-img-3.jpg", alt="")
+        img(src="img/img--details/intro-img-3.jpg", alt="Canon 1DX Mark III")
         p Canon EOS 1DX Mark III sử dụng cảm biến AF mới với khả năng tự động lấy nét chính xác qua kính ngắm, Live View và video. Thông qua kính ngắm, hệ thống AF gồm 191 điểm lấy nét nhanh và chính xác tuyệt đối không chỉ ở tốc độ mà còn đạt khả năng AF Tracking mới. Về cách nhận diện khuôn mặt, EOS-1D X Mark III hỗ trợ công nghệ Head Detection kết hợp Deep Learning và khả năng đọc, phân tích chủ thể thông qua hình dạng và màu sắc.
 
         h3.main-info__inner-header Tốc độ đỉnh cao
 
-        img(src="img/img--details/intro-img-4.jpg", alt="")
+        img(src="img/img--details/intro-img-4.jpg", alt="Canon 1DX Mark III")
 
         p Tốc độ chụp nhanh của Burst Shooting mang đến cơ hội cao hơn cho các nhiếp ảnh gia chuyên nghiệp để ghi lại khoảnh khắc chính xác với bố cục hoàn hảo. Máy ảnh EOS-1D X Mark III có tốc độ chụp ấn tượng lên tới 16 khung hình / giây bằng kính ngắm, đồng bộ với hệ thống AF / AE mới được phát triển để đáp ứng nhanh về lấy nét tự động chính xác và kiểm soát phơi sáng trong mọi lần chụp quyết định.
 
         h3.main-info__inner-header Thiết kế bền bỉ
 
-        img(src="img/img--details/intro-img-6.png", alt="")
+        img(src="img/img--details/intro-img-6.png", alt="Canon 1DX Mark III")
 
         p EOS-1D X Mark III được trang bị độ bền cơ chế màn trập khoảng 500.000 shot. Được thiết kế với thân máy bằng hợp kim magiê chắc chắn, có khả năng chống bụi và ẩm xung quanh các khu vực quan trọng, EOS-1D X Mark III sẵn sàng chống đỡ trong mọi nhiệm vụ.
       
@@ -236,7 +236,7 @@ block content
           i.fas.fa-chevron-up
 
       #review.main-info__content.collapse.show
-        img.review__img.d-block(src="img/img--details/review-img.jpg", alt="")
+        img.review__img.d-block(src="img/img--details/review-img.jpg", alt="đánh giá Canon 1DX Mark III")
         .review__content
           h1.review__header.text-left Canon 1DX Mark III: Vua của các vị vua
           .review__sub-header 
@@ -256,17 +256,17 @@ block content
       #sample.main-info__content.collapse.show
         .card-columns 
           .card
-            img(src="img/img--details/sample-1.png", alt="" data-toggle="modal" data-target="#sample--full-size")
+            img(src="img/img--details/sample-1.png", alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size")
           .card
-            img(src="img/img--details/sample-2.png", alt="" data-toggle="modal" data-target="#sample--full-size")
+            img(src="img/img--details/sample-2.png", alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size")
           .card
-            img(src="img/img--details/sample-3.png", alt="" data-toggle="modal" data-target="#sample--full-size")
+            img(src="img/img--details/sample-3.png", alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size")
           .card
-            img(src="img/img--details/sample-1.png", alt="" data-toggle="modal" data-target="#sample--full-size")
+            img(src="img/img--details/sample-1.png", alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size")
           .card
-            img(src="img/img--details/sample-2.png", alt="" data-toggle="modal" data-target="#sample--full-size")
+            img(src="img/img--details/sample-2.png", alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size")
           .card
-            img(src="img/img--details/sample-3.png", alt="" data-toggle="modal" data-target="#sample--full-size") 
+            img(src="img/img--details/sample-3.png", alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size") 
 
         #sample--full-size.modal.fade
           .modal-dialog.modal-dialog-centered
