--- a/halo/template/parts/card-2.pug
+++ b/halo/template/parts/card-2.pug
@@ -1,5 +1,5 @@
 .card.item.item--hot.item--sale
-  img.card-img-top(src='img/img--item/item-2.jpg' alt='')
+  img.card-img-top(src='img/img--item/item-2.jpg' alt='Fujifilm X-E3 Silver')
   img.item__badge.item__badge--hot(src="img/img--misc/badge--hot.png", alt="")
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
