--- a/halo/template/parts/card-3.pug
+++ b/halo/template/parts/card-3.pug
@@ -1,5 +1,5 @@
 .card.item.item--sale
-  img.card-img-top(src='img/img--item/item-3.jpg' alt='')
+  img.card-img-top(src='img/img--item/item-3.jpg' alt='Sony Alpha A7 Mark II')
   img.item__badge.item__badge--hot(src="img/img--misc/badge--hot.png", alt="")
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
