--- a/halo/template/parts/card-5.pug
+++ b/halo/template/parts/card-5.pug
@@ -1,5 +1,5 @@
 .card.item
-  img.card-img-top(src='img/img--item/item-5.jpg' alt='')
+  img.card-img-top(src='img/img--item/item-5.jpg' alt='Canon EOS 1DX Mark III')
   img.item__badge.item__badge--hot(src="img/img--misc/badge--hot.png", alt="")
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
