--- a/halo/template/parts/logreg.pug
+++ b/halo/template/parts/logreg.pug
@@ -6,7 +6,7 @@
       .modal-header.flex-wrap
         button.close(type='button' data-dismiss='modal') &times;
         .logreg__logo.w-100.mb-3.d-flex.justify-content-center
-          img(src="img/img--misc/logo-black.png", alt="")
+          img(src="img/img--misc/logo-black.png", alt="halo thế giới máy ảnh")
         p.w-100.font-18.text-center.font-weight-bold.log Đăng nhập  
         p.w-100.font-18.text-center.font-weight-bold.reg Đăng ký
 
@@ -50,11 +50,11 @@
 
         .logreg__platform.justify-content-between.log
           a.platform__link(href="#")
-            img.platform__img(src="img/img--misc/logo-fb.png", alt="")
+            img.platform__img(src="img/img--misc/logo-fb.png", alt="halo thế giới máy ảnh")
           a.platform__link(href="#")
-            img.platform__img(src="img/img--misc/logo-gg.png", alt="")
+            img.platform__img(src="img/img--misc/logo-gg.png", alt="halo thế giới máy ảnh")
           a.platform__link(href="#")
-            img.platform__img(src="img/img--misc/logo-apple.png", alt="")
+            img.platform__img(src="img/img--misc/logo-apple.png", alt="halo thế giới máy ảnh")
 
       .modal-footer
         a.logreg-portal.mx-auto.reg(onclick="logregSwitch()") Quay lại đăng nhập
