--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -35,13 +35,13 @@
 
         .carousel-caption__extra.hidden-till-md
           .extra
-            img.extra-img(src="img/img--carousel/carousel-1-extra-1.png", alt="")
+            img.extra-img(src="img/img--carousel/carousel-1-extra-1.png", alt="Canon EOS R")
             p.extra-text LẤY NÉT TỰ ĐỘNG DUAL PIXEL CMOS 
           .extra
-            img.extra-img(src="img/img--carousel/carousel-1-extra-2.png", alt="")
+            img.extra-img(src="img/img--carousel/carousel-1-extra-2.png", alt="Canon EOS R")
             p.extra-text TỐI ƯU HÓA ĐIỀU KHIỂN 
           .extra
-            img.extra-img(src="img/img--carousel/carousel-1-extra-3.png", alt="")
+            img.extra-img(src="img/img--carousel/carousel-1-extra-3.png", alt="Canon EOS R")
             p.extra-text QUAY VIDEO ĐA CHẾ ĐỘ ĐỘ PHÂN GIẢI 4K
 
 
@@ -58,18 +58,18 @@
 
             .logo-sony-a9-wrapper
               p.logo-sony SONY
-              img.a9-logo(src="img/img--carousel/a9-logo.png", alt="")
+              img.a9-logo(src="img/img--carousel/a9-logo.png", alt="SONY a9 mark 2")
 
             .progress.display-till-md(style='height: 5px')
               .progress-bar(role='progressbar' aria-valuemin='0' aria-valuemax='100' style='width: 100%; height: 5px')
 
           .carousel-caption__extra.hidden-till-md
             .extra
-              img.extra-img(src="img/img--carousel/carousel-2-extra-1.png", alt="") 
+              img.extra-img(src="img/img--carousel/carousel-2-extra-1.png", alt="SONY a9 mark 2") 
             .extra
-              img.extra-img(src="img/img--carousel/carousel-2-extra-2.png", alt="")
+              img.extra-img(src="img/img--carousel/carousel-2-extra-2.png", alt="SONY a9 mark 2")
             .extra
-              img.extra-img(src="img/img--carousel/carousel-2-extra-3.png", alt="")
+              img.extra-img(src="img/img--carousel/carousel-2-extra-3.png", alt="SONY a9 mark 2")
 
           p.main-carousel__text.display-till-md SỰ HOÀN HẢO
           p.main-carousel__text.hidden-till-md Sự hoàn hảo chưa bao giờ đơn giản đến vậy
@@ -94,7 +94,7 @@
             p.logo-sony SONY
             span.collab
               i.fas.fa-times
-            img.lotr-logo(src="img/img--carousel/lotr-logo.png", alt="")
+            img.lotr-logo(src="img/img--carousel/lotr-logo.png", alt="lord of the rings")
           
           .carousel-caption__img--triple.hidden-till-md
             .carousel-caption__img
