--- a/halo/template/parts/review-post-1.pug
+++ b/halo/template/parts/review-post-1.pug
@@ -1,5 +1,5 @@
 a.review__post(href="review-details.html")
-  img.review__post--img(src="img/img--review/review-post-img-1.jpg", alt="")
+  img.review__post--img(src="img/img--review/review-post-img-1.jpg", alt="đánh giá Canon EOS 1DX Mark III")
   .review__post--content 
     h1.post__header.text-left Canon EOS 1DX Mark III: Vua của các vị&nbsp;vua
     p.post__subtext.font-italic 
